Completado CRUD de Operaciones y actualizado Swagger
